[gd_scene load_steps=9 format=3 uid="uid://rt2raiokvbax"]

[ext_resource type="FontFile" uid="uid://b4h7ccgvjcco3" path="res://assets/ken_fonts/kenpixel.ttf" id="1_31a77"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_q1p66"]
[ext_resource type="AudioStream" uid="uid://dwygxvhfvhdq8" path="res://assets/sounds/001_Hover_01.mp3" id="3_lfchg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4veng"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdedx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fd2mw"]
bg_color = Color(0.756087, 0.756087, 0.756087, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0t67v"]
bg_color = Color(0.603248, 0.603248, 0.603248, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1h5bb"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q1p66")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4veng")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "= PAUSE ="

[node name="ResumeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -173.5
offset_right = 82.5
offset_bottom = -68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_31a77")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdedx")
theme_override_styles/hover = SubResource("StyleBoxFlat_fd2mw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0t67v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1h5bb")
text = "Resume"

[node name="HowToPlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50275
anchor_top = 0.692086
anchor_right = 0.50275
anchor_bottom = 0.692086
offset_left = -154.168
offset_top = -173.472
offset_right = 153.832
offset_bottom = -68.472
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_31a77")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdedx")
theme_override_styles/hover = SubResource("StyleBoxFlat_fd2mw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0t67v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1h5bb")
text = "How To play"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50275
anchor_top = 0.692086
anchor_right = 0.50275
anchor_bottom = 0.692086
offset_left = -154.168
offset_top = 58.528
offset_right = 153.832
offset_bottom = 163.528
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_31a77")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdedx")
theme_override_styles/hover = SubResource("StyleBoxFlat_fd2mw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0t67v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1h5bb")
text = "Main menu"

[node name="Credits" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.407493
anchor_top = 0.872654
anchor_right = 0.407493
anchor_bottom = 0.872654
offset_left = -100.432
offset_top = -173.48
offset_right = 99.568
offset_bottom = -68.48
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_31a77")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdedx")
theme_override_styles/hover = SubResource("StyleBoxFlat_fd2mw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0t67v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1h5bb")
text = "Credits"

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.594993
anchor_top = 0.872654
anchor_right = 0.594993
anchor_bottom = 0.872654
offset_left = -100.432
offset_top = -173.48
offset_right = 99.568
offset_bottom = -68.48
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_31a77")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdedx")
theme_override_styles/hover = SubResource("StyleBoxFlat_fd2mw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0t67v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1h5bb")
text = "Settings"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.198
anchor_right = 0.5
anchor_bottom = 0.198
offset_left = -224.0
offset_top = -96.304
offset_right = 224.0
offset_bottom = 95.696
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("1_31a77")
theme_override_font_sizes/font_size = 70
text = "Pause"
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lfchg")
bus = &"SFX"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
